thesis: Move discussion of requirements of our work into discussion/related work chapters

--- a/thesis/sections/introduction.tex
+++ b/thesis/sections/introduction.tex
@@ -1,6 +1,7 @@
 %!TEX root = ../thesis.tex
 
 \chapter{Introduction}
+\label{chp:introduction}
 
 This thesis is in the realm of formal verification, i.e. the attempt to verify a system by the use of formal methods such as SAT solvers, interactive theorem provers and model checkers.
 With these tools, formal verification engineers strive to prove the correctness of systems such as general computer programs, \glspl{os}, compilers or hardware designs.
