--- a/thesis/sections/discussion.tex
+++ b/thesis/sections/discussion.tex
@@ -3,7 +3,7 @@
 \chapter{Discussion}
 \label{chp:discussion}
 
-In section \ref{sec:ifc-properties}, a set of \gls{ifc} properties based on the work in \cite{Ferraiuolo17} has been introduced; we will refer to these properties as the set $ P $.
+In section \ref{sec:ifc-properties}, a set of \gls{ifc} properties based on the work in \cite{Ferraiuolo17} has been introduced; the set of these properties will be referred to as $ P $.
 These properties were model checked, the main result of which was a set of rules $ R $ as presented in the previous chapter \ref{chp:results} .
 What is the consequence of this?
 The formal achievement of this thesis can be summarized as follows:
@@ -20,11 +20,12 @@ We will cover four aspects of our work:
 \begin{itemize}
     \item Scope, i.e. what are the limits of our results,
     \item Trustworthiness, i.e. whether our results are sound,
-    \item whether the model could have been implemented more abstractly, and
-    \item if there are alternatives to tracking information on a per-bit basis.
+    \item whether the model could have been implemented more abstractly,
+    \item if there are alternatives to tracking information on a per-bit basis, and finally
+    \item whether the results meet the self-imposed requirements as set up in chapter \ref{chp:introduction} and section \ref{sec:sum-background}.
 \end{itemize}
 
-Whereas the topics of the scope and trustworthiness of our work touch more general aspects of our work, the two latter questions reflect on the methodology of this thesis and will elaborate other possible approaches to our subject.
+Whereas the topics of the scope and trustworthiness of our work touch more general aspects of our work, the two questions following up on this reflect on the methodology of this thesis and will elaborate other possible approaches to our subject.
 
 \section{Scope}
 \label{sec:scope}
@@ -337,3 +338,55 @@ This option only shrinks the state space by a linear factor - nevertheless it mi
 
 The gist of these findings is:
 Whereas in the work of \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17} tracking of each and every bit for a given system was crucial because the authors \textit{could not choose where bugs occur}, it seems that in our more-high level approach, for every bug \enquote{imaginable}, there is a very simple trace illustrating it: nuXmv is able to choose where a bug occurs since it quantifies over programs as opposed to the work of \citeauthor{Ferraiuolo17} where the program of interest is fixed.
+
+\section{Requirements}
+\label{sec:discuss-requirements}
+
+In the introduction, three goals were set for this thesis: it was claimed that the approach presented as part of this thesis is \textit{viable}, i.e. feasible, realistic and generalizable, \textit{relevant}, i.e. it is able to detect issues, and \textit{supplemental}, i.e. it enhances on related work.
+
+All proofs were run on a laptop equipped with an Intel Core i7-7500U CPU and 8GB of RAM.
+It is safe to say, that these are very moderate hardware requirements.
+Proofs were conducted per property.
+None of these proofs took more than 60s.
+While we can give no clear count of working hours spent on this thesis, all of it was developed and written by a single person in no more than nine months.
+During this time, this person did not solely work on this thesis.
+In a non-research scenario one can assume that development would be more straight forward since it would not include the definition of an architecture.
+Due to the exponential blow-up of binary encoded state spaces, there are no guarantees that this approach scales well to realistic and complete architectures.
+However, there are two reasons which make seem likely that this approach does indeed scale.
+Firstly, the proofs here were ran on a small machine and didn't take much time.
+Secondly, in sections \ref{sec:per-bit-tracking} it was discussed that bit-wise tracking of information flow might be dropped, i.e. there is room for performance improvements.
+All of this gives good reasons to believe that our approach is indeed \textit{viable} and could be applied to other architectures with reasonable effort.
+
+To discuss the \textit{relevance} of this work, recall that in section \ref{sec:assumptions} it was shown that the implementation of the MINRV8 architecture models the property \enquote{assumptions $ \Leftrightarrow $ properties}.
+This was put to a test by exposing the implementation to the cache poisoning or SYSRET vulnerability where it was found that it then does violate the properties as presented in section \ref{sec:ifc-properties}.
+In other words: it was shown that the three properties \smv{MEMORY_OP_INTEGRITY}, \smv{CSR_INTEGRITY} and \smv{NO_LEAK} cover at least vulnerabilities related to the cache poisoning or SYSRET vulnerability without any manual intervention besides changing the architecture itself.
+This marks the main result of this thesis and shows that this work is \textit{relevant}.
+Furthermore, mitigations to these vulnerabilities can be verified using the same model.
+It must be decided on a case by case basis whether a given violation of the information flow properties actually marks a vulnerability of the architecture leaving it with the need to be altered or marks a feature the risks of which must be controlled in software.
+
+The discussion whether our work also is \textit{supplemental} will be postponed to a later stage.
+In the following chapter \ref{chp:related-work}, related work will be presented.
+Following up on this, this discussion will be picked up.
+
+In addition to these self-imposed goals, it was also decided in section \ref{sec:verify-spec} to adopt the four design goals that were initially introduced in \cite{Reid17}.
+These were defined to apply to high level properties for specifications and list as follows:
+\begin{displaycquote}[pp.88:2-3]{Reid17}
+    The central design challenge we face is to create a set of properties that:
+    \begin{itemize}
+        \item express the major guarantees that programmers depend on;
+        \item are concise so that architects can easily review and remember the entire set of properties;
+        \item are stable so that architectural extensions don't invalidate large numbers of rules;
+        \item and that describe the architecture differently from existing specification to reduce the risk of common-mode failure.
+    \end{itemize}
+\end{displaycquote}
+
+These objectives are met by our work:
+\begin{itemize}
+    \item The assumptions give rules for programmers of \glspl{os} and compilers that guarantee programs adhering to these do not violate basic information flow properties.
+    \item Both assumptions and properties are small in number and short and can be expressed in intuitive natural language, hence are concise.
+    \item The properties itself are completely architecture independent and as such stable.
+    The assumptions are architecture dependent and rely on both instructions available and concrete semantics of these instructions.
+    However, we feel subjectively that only basic mechanics are used and predict that the assumptions in a practical environment of an architecture should be relatively stable as well.
+    \item The premise of information flow tracking on instruction level is to describe the architecture from a different point of view.
+    It is therefore obvious that there is very little risk of common-mode failure.
+\end{itemize}
