thesis: Misc improvements

--- a/thesis/sections/background.tex
+++ b/thesis/sections/background.tex
@@ -17,6 +17,7 @@ In each of these subsections , a collection of \glspl{isa} or model checkers res
     \item give a better feel for the field as a whole and
     \item meaningfully argue for one of the presented options to be worked with in this thesis.
 \end{enumerate*}
+However, the sections on \gls{risc} architectures other than RISC-V and model checker other than nuXmv can be skipped by readers that are more interested in the results of this thesis.
 
 As a final part of the background, in section \ref{sec:sum-background}, a summary of all aforementioned sections will be given which will finally allow for a outline of this thesis's methodology.
 
