--- a/thesis/sections/introduction.tex
+++ b/thesis/sections/introduction.tex
@@ -48,7 +48,7 @@ The information flow control that in \cite{Ferraiuolo17} was given by a type sys
 We claim that approach that will be developed in the course of this thesis is
 \begin{itemize}
     \item viable, i.e. the hardware requirements are low and the work can be reproduced with limited time investment,
-    \item relevant, i.e. the approach successfully uncovers issues in architectures, and
+    \item effective, i.e. the approach successfully uncovers issues in architectures, and
     \item supplemental, i.e. it enhances on related work such as \cite{Reid17}.
 \end{itemize}
 
