thesis: Use documentclass scrbook

--- a/thesis/preface/abstract.tex
+++ b/thesis/preface/abstract.tex
@@ -1,3 +1,4 @@
+\chapter*{\centering Abstract}
 
 This thesis proposes an approach to formally verifying \glspl{isa} against higher level properties using the model checker nuXmv.
 This was first proposed by \cite{Reid17}.
