--- a/thesis/preface/acknowledgements.tex
+++ b/thesis/preface/acknowledgements.tex
@@ -1,3 +1,4 @@
+\chapter*{\centering Acknowledgements}
 
 First and foremost, I would like to thank Alastair Reid, formerly employed at Arm Ltd., now working for Google Research, for all the time and help he put into this thesis.
 I was very lucky to be able to continue the work he and I did during my internship at Arm.
