--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -6,7 +6,7 @@
 \usepackage[hidelinks]{hyperref}
 \usepackage{syntax}
 \usepackage[euler]{textgreek}
-\usepackage[acronym,nomain]{glossaries}
+\usepackage[acronym,nomain,nonumberlist]{glossaries}
 \usepackage{colortbl}
 \usepackage{subcaption}
 \usepackage{multirow}
