thesis: Add Eigenstaendigskeitserklaerung

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -137,4 +137,20 @@
     \input{appendix/counter-examples.tex}
 \end{appendices}
 
+\newpage
+
+\chapter*{Erklärung}
+
+Ich versichere, dass ich die vorliegende Arbeit selbstständig und nur unter Verwendung der angegebenen Quellen und Hilfsmittel angefertigt habe, insbesondere sind wörtliche oder sinngemäße Zitate als solche gekennzeichnet.
+Mir ist bekannt, dass Zuwiderhandlung auch nachträglich zur Aberkennung des Abschlusses führen kann.
+Ich versichere, dass das elektronische Exemplar mit den gedruckten Exemplaren übereinstimmt.
+
+\begin{multicols}{3}
+    Ort: \par
+    \columnbreak
+    Datum: \par
+    \columnbreak
+    Unterschrift: \par
+\end{multicols}
+
 \end{document}
