thesis: Improvements due to proof-reading by @friedrichschoene

--- a/thesis/defs/acronyms.tex
+++ b/thesis/defs/acronyms.tex
@@ -14,7 +14,7 @@
 \newacronym{rsa}{RSA}{Rivest–Shamir–Adleman}
 \newacronym{nmi}{NMI}{non-maskable interrupt}
 \newacronym{alu}{ALU}{arithmetic logic unit}
-\newacronym{pma}{PMA}{phsyical memory attribute}
+\newacronym{pma}{PMA}{physical memory attribute}
 \newacronym{pmp}{PMP}{physical memory protection}
 \newacronym{hdl}{HDL}{hardware description language}
 \newacronym{bmc}{BMC}{Bounded Model Checking}
@@ -73,6 +73,6 @@
 \newacronym{xcause}{$x$cause}{exception cause}
 \newacronym{xtval}{$x$tval}{trap value}
 
-\newacronym{pmpcfg}{pmpcfg}{phsyical memory protection configuration}
-\newacronym{pmpaddr}{pmpaddr}{phsyical memory protection address}
-\newacronym{pmacfg}{pmacfg}{phsyical memory attributes configuration}
+\newacronym{pmpcfg}{pmpcfg}{physical memory protection configuration}
+\newacronym{pmpaddr}{pmpaddr}{physical memory protection address}
+\newacronym{pmacfg}{pmacfg}{physical memory attributes configuration}
