--- a/thesis/preface/acknowledgements.tex
+++ b/thesis/preface/acknowledgements.tex
@@ -3,7 +3,7 @@
 First and foremost, I would like to thank Alastair Reid, formerly employed at Arm Ltd., now working for Google Research, for all the time and help he put into this thesis.
 I was very lucky to be able to continue the work he and I did during my internship at Arm.
 I am very grateful that even after my internship at Arm ended, he put his free time into my work such that I was able to write a thesis in the field of formal verification.
-Without his guidance, I wouldn't have been able to write, not even start this thesis.
+Without his guidance, I would not have been able to write, not even start this thesis.
 
 Secondly, I want to thank Jörn Hoffmann of the department of Technische Informatik who agreed to supervise me at the University of Leipzig.
 Without having known me or having a direct affiliation to the topic of my thesis, he allowed me to officially write this thesis and gave guidance whenever I wasn't sure about the direction of my thesis.
