--- a/thesis/sections/discussion.tex
+++ b/thesis/sections/discussion.tex
@@ -353,7 +353,7 @@ During this time, this person did not solely work on this thesis.
 In a non-research scenario one can assume that development would be more straight forward since it would not include the definition of an architecture.
 Due to the exponential blow-up of binary encoded state spaces, there are no guarantees that this approach scales well to realistic and complete architectures.
 However, there are two reasons which make seem likely that this approach does indeed scale.
-Firstly, the proofs here were ran on a small machine and didn't take much time.
+Firstly, the proofs here were ran on a small machine and did not take much time.
 Secondly, in sections \ref{sec:per-bit-tracking} it was discussed that bit-wise tracking of information flow might be dropped, i.e. there is room for performance improvements.
 All of this gives good reasons to believe that our approach is indeed \textit{viable} and could be applied to other architectures with reasonable effort.
 
