--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -60,7 +60,7 @@
 
 \sloppy
 
-\hyphenation{im-ple-ment-ed ap-pro-xi-ma-ti-on}
+\hyphenation{im-ple-ment-ed ap-pro-xi-ma-ti-on SecVerilog SecVerilogBL}
 
 \addbibresource{references.bib}
 
