thesis: Adjust acknowledgements

--- a/thesis/preface/acknowledgements.tex
+++ b/thesis/preface/acknowledgements.tex
@@ -11,4 +11,4 @@ Without having known me or having a direct affiliation to the topic of my thesis
 Also I want to thank Prof. Dr. Andreas Maletti of the department of Algebraische und logische Grundlagen der Informatik.
 When I was working on my thesis but was not yet supervised by someone at my university, he helped me to keep motivated whenever I felt lost because of the physical distance to my unofficial supervisor.
 
-And last but not least, I want to thank my proofreaders and friends Friedrich Schöne and Nico Duldhardt who not only read my thesis but also contributed towards it by friendship and exchange.
+And last but not least, I want to thank my proofreader and friend Friedrich Schöne who not only read my thesis but also contributed towards it by friendship and exchange.
